[master] minor changes
