# pkg/api/hello_world_api_grpc.pb.go
@@ -20,6 +20,8 @@ const _ = grpc.SupportPackageIsVersion7
 
 const (
 	HelloWorldAPI_Version_FullMethodName = "/hello_world_api.helloWorldAPI/Version"
+	HelloWorldAPI_Get_FullMethodName     = "/hello_world_api.helloWorldAPI/Get"
+	HelloWorldAPI_Set_FullMethodName     = "/hello_world_api.helloWorldAPI/Set"
 )
 
 // HelloWorldAPIClient is the client API for HelloWorldAPI service.
@@ -27,6 +29,8 @@ const (
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type HelloWorldAPIClient interface {
 	Version(ctx context.Context, in *Version_Request, opts ...grpc.CallOption) (*Version_Response, error)
+	Get(ctx context.Context, in *Get_Request, opts ...grpc.CallOption) (*Value, error)
+	Set(ctx context.Context, in *Set_Request, opts ...grpc.CallOption) (*Set_Response, error)
 }
 
 type helloWorldAPIClient struct {
@@ -46,11 +50,31 @@ func (c *helloWorldAPIClient) Version(ctx context.Context, in *Version_Request, 
 	return out, nil
 }
 
+func (c *helloWorldAPIClient) Get(ctx context.Context, in *Get_Request, opts ...grpc.CallOption) (*Value, error) {
+	out := new(Value)
+	err := c.cc.Invoke(ctx, HelloWorldAPI_Get_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *helloWorldAPIClient) Set(ctx context.Context, in *Set_Request, opts ...grpc.CallOption) (*Set_Response, error) {
+	out := new(Set_Response)
+	err := c.cc.Invoke(ctx, HelloWorldAPI_Set_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // HelloWorldAPIServer is the server API for HelloWorldAPI service.
 // All implementations must embed UnimplementedHelloWorldAPIServer
 // for forward compatibility
 type HelloWorldAPIServer interface {
 	Version(context.Context, *Version_Request) (*Version_Response, error)
+	Get(context.Context, *Get_Request) (*Value, error)
+	Set(context.Context, *Set_Request) (*Set_Response, error)
 	mustEmbedUnimplementedHelloWorldAPIServer()
 }
 
@@ -60,6 +84,12 @@ type UnimplementedHelloWorldAPIServer struct {
 
 func (UnimplementedHelloWorldAPIServer) Version(context.Context, *Version_Request) (*Version_Response, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Version not implemented")
+}
+func (UnimplementedHelloWorldAPIServer) Get(context.Context, *Get_Request) (*Value, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Get not implemented")
+}
+func (UnimplementedHelloWorldAPIServer) Set(context.Context, *Set_Request) (*Set_Response, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Set not implemented")
 }
 func (UnimplementedHelloWorldAPIServer) mustEmbedUnimplementedHelloWorldAPIServer() {}
 
@@ -92,6 +122,42 @@ func _HelloWorldAPI_Version_Handler(srv interface{}, ctx context.Context, dec fu
 	return interceptor(ctx, in, info, handler)
 }
 
+func _HelloWorldAPI_Get_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Get_Request)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HelloWorldAPIServer).Get(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: HelloWorldAPI_Get_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HelloWorldAPIServer).Get(ctx, req.(*Get_Request))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _HelloWorldAPI_Set_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Set_Request)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HelloWorldAPIServer).Set(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: HelloWorldAPI_Set_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HelloWorldAPIServer).Set(ctx, req.(*Set_Request))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // HelloWorldAPI_ServiceDesc is the grpc.ServiceDesc for HelloWorldAPI service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -102,6 +168,14 @@ var HelloWorldAPI_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Version",
 			Handler:    _HelloWorldAPI_Version_Handler,
+		},
+		{
+			MethodName: "Get",
+			Handler:    _HelloWorldAPI_Get_Handler,
+		},
+		{
+			MethodName: "Set",
+			Handler:    _HelloWorldAPI_Set_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
