# pkg/grpc/hello_world_api.pb.ts
@@ -16,8 +16,37 @@ export type VersionResponse = {
 
 export type Version = Record<string, never>;
 
+export type Value = {
+  key?: string;
+  value?: string;
+};
+
+export type Values = {
+  values?: Value[];
+};
+
+export type GetRequest = {
+  key?: string;
+};
+
+export type Get = Record<string, never>;
+
+export type SetRequest = {
+  vals?: Values;
+};
+
+export type SetResponse = Record<string, never>;
+
+export type Set = Record<string, never>;
+
 export class helloWorldAPI {
   static Version(this:void, req: VersionRequest, initReq?: fm.InitReq): Promise<VersionResponse> {
     return fm.fetchRequest<VersionResponse>(`/v1/version`, {...initReq, method: "POST", body: JSON.stringify(req, fm.replacer)});
+  }
+  static Get(this:void, req: GetRequest, initReq?: fm.InitReq): Promise<Value> {
+    return fm.fetchRequest<Value>(`/v1/get/${req.key}?${fm.renderURLSearchParams(req, ["key"])}`, {...initReq, method: "GET"});
+  }
+  static Set(this:void, req: SetRequest, initReq?: fm.InitReq): Promise<SetResponse> {
+    return fm.fetchRequest<SetResponse>(`/v1/set`, {...initReq, method: "POST", body: JSON.stringify(req, fm.replacer)});
   }
 }
